# aprendizaje_automatico

./: .exrc  .gitignore  README.md  Trabajo_Corto_1.ipynb  pyproject.toml
Proyecto/: .gitattributes  document.tex  notebook.ipynb
Proyecto/data/: olist.db
Trabajo_Corto_1/data/: DailyDelhiClimate.csv  TS_d_2.csv  TS_d_3.csv
Trabajo_Corto_2/: Trabajo_Corto_2.ipynb
Trabajo_Corto_2/data/: cardio.csv
Trabajo_Corto_3/: .gitattributes  Trabajo_Corto_3.ipynb  document.tex  references.bib
Trabajo_Corto_3/data/: datos_imagenes_USAR.csv
data/: trainV.csv
