[project]
name = "aprendizaje-automatico"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]

[tool.basedpyright]
typeCheckingMode = "standard"
