[project]
name = "aprendizaje-automatico"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cmdstanpy>=1.2.5",
  "ipykernel>=6.30.1",
  "jupyter-console>=6.6.3",
  "matplotlib>=3.10.6",
  "numpy>=2.3.3",
  "pandas>=2.3.2",
  "pandas-stubs>=2.3.2.250827",
  "prophet>=1.1.7",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.5",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
